--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,25 +5,55 @@
 }
 
 .nav {
+    background-color: white;
+    position: fixed;
+    top: 0; 
+    width: 100%;
+}
 
+.nav a {
+    color: #777777;
+    float: right;
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
 .navbarname {
     color: white;
     background-color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
-}
-
-#name {
-
+    width: 200px;
+    display: inline-block;
+    position: fixed;
+    top: 0;
 }
 
 .container {
-    
+    width: 960px;
+    margin: auto;
 }
 
-h1 {
+h2 {
     font-family: 'Georgia', Times, Times New Roman, serif;
     color: #4aaaa5;
 
+}
+
+.image {
+    position: relative;
+    text-align: center;
+    width: 250px;
+}
+
+.text {
+    position: absolute;
+    top: 75%;
+    color: white;
+    align-items: center;
+    background-color: #4aaaa5;
+    width: 250px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
