--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,14 @@
 
 .nav {
     background-color: white;
-    position: fixed;
+    position: top fixed;
     top: 0; 
     width: 100%;
+}
+
+.navcontainer {
+    width: 960px;
+    margin: auto;
 }
 
 .nav a {
@@ -24,10 +29,10 @@
     color: white;
     background-color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
-    width: 200px;
+    width: 250px;
     display: inline-block;
-    position: fixed;
-    top: 0;
+    position: top fixed;
+    text-align: center;
 }
 
 .container {
@@ -52,18 +57,20 @@ h2 {
 .image {
     position: relative;
     text-align: center;
-    width: 250px;
+    width: 330px;
     float: left;
     display: block;
+    padding-right: 30px;
+    padding-bottom: 40px;
 }
 
 .text {
     position: absolute;
-    top: 75%;
+    top: 65%;
     color: white;
     align-items: center;
     background-color: #4aaaa5;
-    width: 250px;
+    width: 330px;
     padding-top: 15px;
     padding-bottom: 15px;
 }
