--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,12 @@
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
+/*   For some reason this didn't work, only works when I add it on the HTML??
+body {
+    background-image: url(assets/images/background.png);
+}
+*/
+
 .nav {
     background-color: white;
     position: top fixed;
@@ -54,6 +60,30 @@ h2 {
     padding-bottom: 5px;
 }
 
+/* Contact Page Elements */
+form {
+    width: 100%; 
+    padding: 12px; /* Some padding */ 
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  }
+
+  input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+
+
+/* Portfolio Page Elements */
 .image {
     position: relative;
     text-align: center;
