--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,14 +12,12 @@ body {
 
 .nav {
     background-color: white;
-    position: top fixed;
-    top: 0; 
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
     width: 100%;
-}
-
-.navcontainer {
-    width: 960px;
-    margin: auto;
+    z-index: 1;
 }
 
 .nav a {
@@ -29,6 +27,7 @@ body {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    border-right: thin solid #cccccc;
 }
 
 .navbarname {
@@ -37,13 +36,25 @@ body {
     font-family: 'Georgia', Times, Times New Roman, serif;
     width: 250px;
     display: inline-block;
-    position: top fixed;
     text-align: center;
+    position: fixed absolute;
+    top: 0;
+    z-index: 2;
+}
+
+.navcontainer {
+    width: 960px;
+    margin: auto;
 }
 
 .container {
     width: 960px;
     margin: auto;
+}
+
+.content {
+    margin-top: 100px;
+    background-color: white;
 }
 
 h2 {
@@ -85,22 +96,10 @@ form {
 
 /* Portfolio Page Elements */
 .image {
-    position: relative;
     text-align: center;
     width: 330px;
     float: left;
     display: block;
     padding-right: 30px;
     padding-bottom: 40px;
-}
-
-.text {
-    position: absolute;
-    top: 65%;
-    color: white;
-    align-items: center;
-    background-color: #4aaaa5;
-    width: 330px;
-    padding-top: 15px;
-    padding-bottom: 15px;
 }
