--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,10 +119,24 @@ form {
 
 /* Portfolio Page Elements */
 .image {
+    position: relative;
     text-align: center;
     width: 330px;
     float: left;
     display: block;
     padding-right: 30px;
     padding-bottom: 40px;
+}
+
+.text {
+    position: absolute;
+    top: 62%;
+    color: white;
+    align-items: center;
+    background-color: #4aaaa5;
+    width: 330px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size: 19px;
 }
