--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,12 @@
-/* Can't figure out:
-1. How to center my name in its background in the navbar header (tried making its position relative to the navbar and tried giving it a top padding and a top margin) 
-
-2. How to adjust the lines next the the navbar items to make them smaller and to make the one next to contact go away
-
-3. 
-*/
-
-
-/* I made this a class because it's on three different pages, but it didn't seem to have any problems as an ID? */
 * {
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
-/*   For some reason this didn't work, only works when I add it on the HTML??
 body {
-    background-image: url(assets/images/background.png);
+    background-image: url(../images/background.png);
 }
-*/
+
 
 .nav {
     background-color: white;
@@ -37,21 +26,29 @@ body {
     display: block;
     text-align: center;
     padding: 14px 16px;
+    padding-bottom: 0px;
+    padding-top: 0px;
     text-decoration: none;
     border-right: thin solid #dddddd;
-    margin-top: 10px;
+    margin-top: 25px;
 }
+
+. #contact {
+    border-right: none;
+}
+
 
 .navbarname {
     color: white;
     background-color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
     width: 250px;
-    height: 75px;
+    height: 55px;
     display: inline-block;
     text-align: center;
     z-index: 2;
     margin: auto;
+    padding-top: 20px;
 }
 
 .navcontainer {
